@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.fattoquotidianotv" name="Il Fatto Quotidiano TV" version="1.0.3" provider-name="NeverWise">
+<addon id="plugin.video.fattoquotidianotv" name="Il Fatto Quotidiano TV" version="1.0.4" provider-name="NeverWise">
   <requires>
-    <import addon="xbmc.python" version="2.1.0"/>
-    <import addon="script.module.neverwise" version="1.0.5"/>
-    <import addon="script.module.pyamf" version="0.6.2"/>
+    <import addon="xbmc.python" version="2.14.0"/>
+    <import addon="script.module.neverwise" version="1.0.6"/>
     <import addon="plugin.video.youtube" version="4.4.10" optional="true"/>
-    <import addon="plugin.video.serviziopubblico" version="1.0.5" optional="true"/>
+    <import addon="plugin.video.serviziopubblico" version="1.0.6" optional="true"/>
   </requires>
   <extension point="xbmc.python.pluginsource" library="default.py">
-    <provides>video</provides>
+    <provides>audio video</provides>
   </extension>
   <extension point="xbmc.addon.metadata">
     <platform>all</platform>
